fix(search): z-index in contact page

--- a/assets/css/nav-search.less
+++ b/assets/css/nav-search.less
@@ -71,6 +71,7 @@
    * Hits
    */
   #hits {
+    z-index: 10000;
     width: 100%;
     background: #fff;
     border-radius: 3px;
